applications/platform-demo/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 440946411147.dkr.ecr.us-west-2.amazonaws.com/platform-demo/frontend:v1

        ports:
        - containerPort: 8080
