applications/platform-demo/k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment

    spec:
      containers:
      - name: payment

        image: 440946411147.dkr.ecr.us-west-2.amazonaws.com/platform-demo/payment:v1

        ports:
        - containerPort: 8080
