applications/platform-demo/k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service

spec:
  selector:
    app: payment

  ports:
  - port: 80
    targetPort: 8080
